# sysrepo-gnmi

./: .gitignore  README.md  build-deps.sh  ci-local.sh  meson.build  meson.options
.github/workflows/: ci.yml
conf/: gnmi-server.service
debian/: changelog  control  copyright  rules
proto/: gen-proto-c.sh  gnmi.proto
src/: auth.h  capabilities.c  capabilities.h  compat.h  confirm.c  confirm.h  encode.c  encode.h  get.c  get.h  gnmi_service.c  gnmi_service.h  log.c  log.h  main.c  monitoring.c  monitoring.h  rpc.c  rpc.h  server.c  server.h  session.c  session.h  set.c  set.h  subscribe.c  subscribe.h  xpath.c  xpath.h
subprojects/: libyang-v2.wrap  libyang-v3.wrap  libyang-v5.wrap  libyang.wrap  sysrepo-v2.wrap  sysrepo-v3.wrap  sysrepo-v5.wrap  sysrepo.wrap
tests/: conftest.py  helpers.py  pytest.ini  seed_oper.c  test_capabilities.py  test_confirm.py  test_get.py  test_gnmic.py  test_graceful_shutdown.py  test_monitoring.py  test_nacm.py  test_notifications.py  test_rpc.py  test_set.py  test_stress.py  test_subscribe.py
tests/proto/: gnmi_ext_pb2.py  gnmi_ext_pb2_grpc.py  gnmi_pb2.py  gnmi_pb2_grpc.py
tests/yang/: gnmi-server-test-wine.yang  gnmi-server-test.yang
yang/: sysrepo-gnmi-monitoring.yang
