option('sanitize', type : 'combo', choices : ['none', 'address', 'thread', 'undefined'], value : 'none', description : 'Enable sanitizer')
option('cesnet_version', type : 'combo', choices : ['v4', 'v3'], value : 'v4', description : 'CESNET library versions (v4 or v3)')
option('analyzer', type : 'boolean', value : false, description : 'Enable gcc -fanalyzer static analysis')
option('test_timeout', type : 'integer', value : 300, description : 'Test suite timeout in seconds (use 1800 for valgrind)')
