option('sanitize', type : 'combo', choices : ['none', 'address', 'thread', 'undefined'], value : 'none', description : 'Enable sanitizer')
option('cesnet_version', type : 'combo', choices : ['v5', 'v4', 'v3', 'v2'], value : 'v4', description : 'CESNET library versions (v2, v3, v4, or v5)')
option('analyzer', type : 'boolean', value : false, description : 'Enable gcc -fanalyzer static analysis')
option('test_timeout', type : 'integer', value : 300, description : 'Test suite timeout in seconds (use 1800 for valgrind)')
